Merge implementacion_qr_funciones